# notebooklmclone

./: .gitignore  DEPLOY.md  PROGRESS.md  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  chat.py  deps.py  documents.py  health.py  notebooks.py  notes.py  outputs.py  search.py
backend/app/auth/: __init__.py  clerk.py  deps.py
backend/app/chat/: __init__.py  maintenance.py  memory.py  orchestrator.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/embedding/: __init__.py  client.py
backend/app/ingestion/: pipeline.py
backend/app/models/: __init__.py  chat.py  document.py  enums.py  note.py  output.py  workspace.py
backend/app/notes/: embedding.py
backend/app/outputs/: __init__.py  generator.py
backend/app/parsing/: __init__.py  base.py  csv_parser.py  docx.py  html.py  pdf.py  pptx.py  text.py
backend/app/prompts/: templates.py
backend/app/retrieval/: __init__.py  hybrid.py  search.py
backend/app/schemas/: __init__.py  chat.py  common.py  document.py  note.py  notebook.py  output.py  search.py
backend/app/services/: llm.py  rerank.py  storage.py
backend/app/utils/: chunking.py  net.py  text.py  tokenizer.py  uploads.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: test_auth.py  test_chunking.py  test_citations.py  test_embed_rerank.py  test_net.py  test_phase4.py  test_retrieval.py  test_text.py  test_uploads.py
frontend/: .env.example  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  (+2 more)
(+17 files in other folders)
