[project]
name = "notebooklm-backend"
version = "0.1.0"
description = "NotebookLM clone — FastAPI backend, Celery workers, RAG pipeline"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.12",
    # Config / validation
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # DB / ORM
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",        # sync driver used by Alembic
    "alembic>=1.13",
    "pgvector>=0.3",
    # Auth
    "pyjwt[crypto]>=2.9",
    "httpx>=0.27",
    # Background queue
    "celery[redis]>=5.4",
    "redis>=5.1",
    # Storage / external
    "supabase>=2.9",
    # Parsing (MVP formats)
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "markdown-it-py>=3.0",
    "beautifulsoup4>=4.12",
    "trafilatura>=1.12",
    "pandas>=2.2",
    # Tokenization / chunking
    "tiktoken>=0.8",
    # Monitoring
    "sentry-sdk[fastapi,celery]>=2.17",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "anyio>=4.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = [
    "B008",   # FastAPI Depends() in defaults is idiomatic
    "UP042",  # `str, Enum` is intentional for clean JSON + DB value serialization
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
